# powermgr_thermal_manager

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  ohos.build  thermalmgr.gni  thermalmgr.yaml
application/protector/: BUILD.gn
application/protector/include/: thermal_kernel_service.h  thermal_protector_timer.h  thermal_protector_util.h  thermal_sensor_provider.h  thermal_sensor_provision.h
application/protector/include/action/: cpu_action.h  current_action.h  device_control_factory.h  ithermal_action.h  thermal_device_control.h  voltage_action.h
application/protector/include/policy/: protector_base_info.h  protector_thermal_zone_info.h  thermal_kernel_config_file.h  thermal_kernel_policy.h
application/protector/profile/: BUILD.gn  thermal_kernel_config.xml
application/protector/src/: main.cpp  thermal_kernel_service.cpp  thermal_protector_timer.cpp  thermal_protector_utils.cpp  thermal_sensor_provider.cpp  thermal_sensor_provision.cpp
application/protector/src/action/: cpu_action.cpp  current_action.cpp  device_control_factory.cpp  thermal_device_control.cpp  voltage_action.cpp
application/protector/src/policy/: protector_thermal_zone_info.cpp  thermal_kernel_config_file.cpp  thermal_kernel_policy.cpp
frameworks/cj/: BUILD.gn  cj_thermal_manager.cpp  cj_thermal_manager.h  cj_thermal_manager_ffi.cpp
frameworks/ets/taihe/ability_delegator/: BUILD.gn
frameworks/napi/: BUILD.gn  napi_errors.cpp  napi_errors.h  napi_utils.cpp  napi_utils.h  thermal_manager_napi.cpp  thermal_manager_napi.h
frameworks/napi/common/: thermal_manager_native_event.cpp  thermal_napi_context.cpp
frameworks/napi/test/: thermal_unit.test.js
frameworks/napi/thermal/: thermal_manager_napi.cpp
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/native/include/: ithermal_action_callback.h  ithermal_level_callback.h  ithermal_srv.h  ithermal_temp_callback.h  thermal_action_callback_ipc_interface_code.h  thermal_level_callback_ipc_interface_code.h  thermal_level_callback_stub.h  (+5 more)
interfaces/innerkits/: BUILD.gn
interfaces/kits/js/: @ohos.thermal.d.ts  BUILD.gn
services/: BUILD.gn
services/native/include/: fan_callback.h  hdf_service_status_listener.h  hdi_service_status_listener.h  thermal_callback.h  thermal_event_handler.h  thermal_mgr_dumper.h  thermal_service.h  thermalsrv_event_handler.h
services/native/profile/: BUILD.gn  thermal_service_config.xml
services/native/src/: fan_callback.cpp  thermal_callback.cpp  thermal_event_handler.cpp  thermal_mgr_dumper.cpp  thermal_service.cpp  thermalsrv_event_handler.cpp
services/native/test/: BUILD.gn
services/zidl/: BUILD.gn  IThermalSrv.idl  ithermal_srv.zidl
services/zidl/include/: thermal_action_callback_proxy.h  thermal_action_callback_stub.h  thermal_level_callback_proxy.h  thermal_level_callback_stub.h  thermal_srv_proxy.h  thermal_srv_stub.h  thermal_temp_callback_proxy.h  thermal_temp_callback_stub.h
services/zidl/src/: thermal_action_callback_proxy.cpp  thermal_action_callback_stub.cpp  thermal_level_callback_proxy.cpp  thermal_level_callback_stub.cpp  thermal_srv_proxy.cpp  thermal_srv_stub.cpp  thermal_temp_callback_proxy.cpp  thermal_temp_callback_stub.cpp
test/fuzztest/getthermalinfo_fuzzer/: BUILD.gn  getthermalinfo_fuzzer_test.cpp
test/fuzztest/thermal_fuzzer/: BUILD.gn  thermal_fuzzer.cpp  thermal_fuzzer.h  thermal_fuzzer_test.cpp  thermal_fuzzer_test.h
test/fuzztest/thermallevelcallbackstub_fuzzer/: BUILD.gn  thermallevelcallbackstub_fuzzer.cpp
test/systemtest/: BUILD.gn
test/systemtest/include/: thermal_level_event_system_test.h  thermal_mgr_dialog_test.h  thermal_mgr_interface_test.h  thermal_mgr_system_test.h
test/systemtest/src/: thermal_level_event_system_test.cpp  thermal_mgr_dialog_test.cpp  thermal_mgr_interface_test.cpp  thermal_mgr_system_test.cpp
test/unittest/: BUILD.gn
test/unittest/include/: fan_fault_detect_test.h  thermal_action_hub_test.h  thermal_action_report_test.h  thermal_application_test.h  thermal_config_file_parser.h  thermal_config_sensor_cluster_test.h  thermal_level_event_test.h  thermal_listener_test.h  thermal_mgr_dump_test.h  thermal_mgr_policy_test.h  thermal_mock_action_test.h  thermal_mock_proxy_sendrequest_test.h  thermal_mock_proxy_writeinterfacetoken_test.h  thermal_mock_proxy_writevector_test.h  thermal_mock_stub_test.h  thermal_observer_test.h  thermal_policy_test.h  thermal_service_interface_test.h  thermal_service_test.h
test/unittest/mock_client/: BUILD.gn
test/unittest/src/: fan_fault_detect_test.cpp  thermal_action_hub_test.cpp  thermal_action_report_test.cpp  thermal_action_test.cpp  thermal_application_test.cpp  thermal_client_api_test.cpp  thermal_client_test.cpp  thermal_config_file_parser.cpp  thermal_config_sensor_cluster_test.cpp  thermal_hookmgr_test.cpp  thermal_level_event_test.cpp  thermal_listener_test.cpp  thermal_mgr_dump_test.cpp  thermal_mgr_policy_test.cpp  thermal_mock_action_test.cpp  thermal_mock_proxy_remote_test.cpp  thermal_mock_proxy_sendrequest_test.cpp  thermal_mock_proxy_test.cpp  thermal_mock_proxy_writeinterfacetoken_test.cpp  thermal_mock_proxy_writeremoteobject_test.cpp  thermal_mock_proxy_writevector_test.cpp  thermal_mock_stub_getdescriptor_test.cpp  thermal_mock_stub_test.cpp  thermal_observer_test.cpp  thermal_policy_test.cpp  thermal_service_death_test.cpp  thermal_service_interface_test.cpp  thermal_service_test.cpp  thermal_utils_test.cpp
utils/: BUILD.gn
utils/appmgr/: BUILD.gn
utils/appmgr/include/: app_manager_utils.h
utils/appmgr/src/: app_manager_utils.cpp
utils/hookmgr/: BUILD.gn
utils/hookmgr/include/: thermal_hookmgr.h
utils/hookmgr/src/: thermal_hookmgr.cpp
utils/native/include/: constants.h  delayed_sp_singleton.h  file_operation.h  hilog_wrapper.h  string_operation.h  thermal_common.h  thermal_hisysevent.h  thermal_log.h  thermal_mgr_errors.h  thermal_xcollie.h
utils/native/src/: file_operation.cpp  string_operation.cpp  thermal_hisysevent.cpp  thermal_xcollie.cpp
utils/shell/include/: thermal_shell_command.h
utils/shell/src/: main.cpp  thermal_shell_command.cpp
(+265 files in other folders)
