# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/powermgr/thermal_manager/thermalmgr.gni")

config("utils_config") {
  include_dirs = [
    "native/include",
    "//commonlibrary/c_utils/base/include",
  ]
}

ohos_source_set("thermal_utils") {
  sources = [
    "native/src/file_operation.cpp",
    "native/src/string_operation.cpp",
    "native/src/thermal_hisysevent.cpp",
  ]

  public_configs = [ ":utils_config" ]

  external_deps = [
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
  ]

  part_name = "thermal_manager"
}

ohos_executable("thermal-shell") {
  include_dirs = [
    "shell/include",
    "${ability_runtime_services_path}/common/include",
    "${ability_runtime_path}/tools/aa/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "shell/src/main.cpp",
    "shell/src/thermal_shell_command.cpp",
  ]

  deps = [
    "${ability_runtime_path}/tools/aa:tools_aa_source_set",
    "${thermal_manager_path}/interfaces/innerkits:thermalsrv_client",
  ]

  configs = [
    "${ability_runtime_path}/tools/aa:ability_command_config",
    "${ability_runtime_services_path}/common:common_config",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]

  install_enable = true
  part_name = "thermal_manager"
}
