# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/powermgr/thermal_manager/thermalmgr.gni")

config("utils_config") {
  include_dirs = [
    "native/include",
    "//commonlibrary/c_utils/base/include",
  ]
}

ohos_source_set("thermal_utils") {
  sources = [
    "native/src/file_operation.cpp",
    "native/src/string_operation.cpp",
    "native/src/thermal_hisysevent.cpp",
  ]

  public_configs = [ ":utils_config" ]

  external_deps = [
    "c_utils:utils",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
  ]

  part_name = "thermal_manager"
}
