# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("../thermalmgr.gni")

config("utils_config") {
  include_dirs = [ "native/include" ]
}

declare_args() {
  thermal_manager_feature_coverage = false
}

config("coverage_flags") {
  if (thermal_manager_feature_coverage) {
    cflags = [ "--coverage" ]
    cflags_cc = [ "--coverage" ]
    ldflags = [ "--coverage" ]
  }
}

ohos_source_set("thermal_utils") {
  branch_protector_ret = "pac_ret"

  sources = [
    "native/src/file_operation.cpp",
    "native/src/string_operation.cpp",
    "native/src/thermal_hisysevent.cpp",
  ]

  configs = [ "${utils_path}:coverage_flags" ]

  public_configs = [ ":utils_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
  ]

  subsystem_name = "powermgr"
  part_name = "thermal_manager"
}
