# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../thermalmgr.gni")

ohos_shared_library("cj_thermal_ffi") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "${thermal_inner_api}/native/include",
    "${utils_path}/native/include",
    "./",
  ]

  sources = [
    "cj_thermal_manager.cpp",
    "cj_thermal_manager_ffi.cpp",
  ]

  deps = [
    "${thermal_inner_api}:thermalsrv_client",
    "${thermal_service_zidl}:thermalmgr_proxy",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
  ]

  innerapi_tags = [ "platformsdk" ]
  part_name = "thermal_manager"
  subsystem_name = "powermgr"
}
