# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/thermal_manager/thermalmgr.gni")

config("thermal_private_config") {
  include_dirs = [ "${thermal_service_zidl}/include" ]
}

config("thermal_public_config") {
  include_dirs = [ "../include" ]
}

ohos_shared_library("thermal") {
  configs = [
    "${utils_path}:utils_config",
    ":thermal_private_config",
  ]

  public_configs = [ ":thermal_public_config" ]

  sources = [
    "common/thermal_manager_native_event.cpp",
    "common/thermal_napi_context.cpp",
    "thermal/thermal_manager_napi.cpp",
  ]

  deps = [
    "${thermal_innerkits}:thermalsrv_client",
    "${thermal_service_zidl}:thermalmgr_proxy",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "thermal_manager:thermalmgr_listener",
  ]

  relative_install_dir = "module"
  part_name = "thermal_manager"
  subsystem_name = "powermgr"
}
