# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../thermalmgr.gni")

config("thermal_private_config") {
  include_dirs = [ "${thermal_service_zidl}/include" ]
}

ohos_shared_library("thermal") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [
    "${utils_path}:utils_config",
    ":thermal_private_config",
    "${utils_path}:coverage_flags",
  ]

  sources = [
    "napi_errors.cpp",
    "napi_utils.cpp",
    "thermal_manager_napi.cpp",
  ]

  deps = [
    "${thermal_inner_api}:thermalsrv_client",
    "${utils_path}:thermal_utils",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"
  part_name = "thermal_manager"
  subsystem_name = "powermgr"
}
