# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/thermal_manager/thermalmgr.gni")

config("thermalsrv_private_config") {
  include_dirs = [ "${thermal_manager_path}/services/zidl/include" ]
}

config("thermalsrv_public_config") {
  include_dirs = [ "native/include" ]
}

ohos_shared_library("thermalsrv_client") {
  sources = [
    "${thermal_manager_path}/frameworks/native/thermal_mgr_client.cpp",
    "${thermal_manager_path}/frameworks/native/thermal_srv_sensor_info.cpp",
    "${thermal_manager_path}/services/zidl/src/thermal_level_callback_proxy.cpp",
    "${thermal_manager_path}/services/zidl/src/thermal_srv_proxy.cpp",
    "${thermal_manager_path}/services/zidl/src/thermal_temp_callback_proxy.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":thermalsrv_private_config",
  ]

  public_configs = [ ":thermalsrv_public_config" ]

  deps = [ "//utils/native/base:utils" ]

  external_deps = [
    "ability_runtime:app_manager",
    "ability_runtime:base",
    "ability_runtime:want",
    "appexecfwk_standard:libeventhandler",
    "bundle_framework:appexecfwk_base",
    "ces_standard:cesfwk_innerkits",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "thermal_manager_native"
}
